<resources>
    <string name="app_name">MakeParty</string>
    <string name="button_criar_conta">CRIAR CONTA</string>
    <string name="button_entrar">ENTRAR</string>
    <string name="img_logo">Logo MakeParty</string>
    <string name="label_login">LogIn</string>
    <string name="label_cadastro">Cadastro</string>
    <string name="label_home">Home</string>
    <string name="label_escolha">Escolha</string>
    <string name="label_definir_regiao">Definir região no mapa</string>
    <string name="text_click_esqueceu_senha">Esqueceu a senha?</string>
    <string name="edit_text_email">E-mail</string>
    <string name="edit_text_senha">Senha</string>
    <string name="edit_text_nome">Nome</string>
    <string name="text_view_cadastro">CADASTRO</string>
    <string name="text_view_nome">Nome:</string>
    <string name="text_view_email">E-mail:</string>
    <string name="text_view_senha">Senha:</string>
    <string name="edit_text_conf_senha">Confirmar senha</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_senha">Senha</string>
    <string name="prompt_nome">Nome</string>
    <string name="prompt_cpf">CPF</string>
    <string name="prompt_data">Data de nascimento</string>
    <string name="prompt_confirmar_email">Confirmar email</string>
    <string name="prompt_confirmar_senha">Confirmar senha</string>
    <string name="edit_text_cnpj">CNPJ</string>
    <string name="edit_text_mei">MEI</string>
    <string name="img_ic_cliente">Icone cliente</string>
    <string name="img_ic_fornecedor">Icone pessoaJuridica</string>
    <string name="action_settings">Configurações</string>
    <string name="Search">Pesquisar</string>
    <string name="ic_pacotes">Pacotes</string>
    <string name="ic_casadefesta">Casa de festa</string>
    <string name="ic_buffet">Buffet</string>
    <string name="ic_decoracao">Decoração</string>
    <string name="ic_animacao">Animação</string>
    <string name="action_filtrar_por_preco">Filtrar por preco</string>
    <string name="action_filtrar_por_regiao">Filtrar por região</string>
    <string-array name="tipodeuser">
        <item>Cliente</item>
        <item>Fornecedor</item>
    </string-array>
    <string name="title_activity_inicio_nav">InicioNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="carrinho">Carrinho</string>
    <string name="prompt_telefone">Telefone</string>
    <string name="label_user_avaliar_fornecedor">Avaliar fornecedor</string>
    <string name="Confirmar">Confirmar</string>
    <string name="text_resultado_user_avaliacao_para_fornecedor">Resultado avaliação</string>
    <string name="text_avaliar_fornecedor">Avaliar fornecedor</string>
    <string name="img_fornecedor_avaliacao">Imagem do fornecedor</string>
    <string name="text_nome_fornecedor">Nome do fornecedor</string>
    <string name="text_view_escolha_usuario">Escolha o tipo de usuário:</string>
    <string name="text_view_title_anuncio">Titulo do anuncio</string>
    <string name="text_view_razao_social_fornecedor">Nome do fornecedor</string>
    <string name="text_view_preco_anuncio">R$0,00</string>
    <string name="text_view_modificar">Titulo "Modificar"</string>
    <string name="text_view_modificar_nome">Editar nome de fornecedor</string>
    <string name="text_view_modificar_email">Editar email de fornecedor</string>
    <string name="text_view_modificar_senha">Editar senha do fornencedor</string>
    <string name="text_view_modificar_cnpj">Editar imei/cnpj do fornencedor</string>
    <string name="text_view_modificar_mandarMensagem">Mande mensagem para o número xxx</string>
    <string name="text_view_modificar_apagarConta">Apague sua conta de fornencedor</string>
    <string name="text_view_modificar_sair">Sair da configuração do fornencedor</string>

    <string name="img_view_foto_anuncio">Foto do anúncio</string>
    <string name="ic_avaliar_anuncio_fornecedor">Avaliar fornecedor pelo anúncio</string>
    <string name="ic_adicionar_anuncio_a_lista_desejos">Adicionar anúncio a lista de desejos</string>
    <string name="text_fornecedor_media_geral">Média geral do tipo de anúncio do fornecedor</string>
    <string name="text_pacotes">Pacotes</string>
    <string name="text_casas_de_festas">Casas de festas</string>
    <string name="text_buffet">Buffet</string>
    <string name="text_decoracao">Decoração</string>
    <string name="text_animacao">Animação</string>

    <string name="msg_error_conexao_indisponivel">Conexão indisponível</string>
    <string name="msg_carro_sem_video">Carro sem vídeo cadastrado</string>
    <string name="msg_url_invalida">URL de vídeo inválida</string>
    <string name="msg_error_io">Ocorreu algum erro ao buscar os dados.</string>
    <string name="msg_erro_io_timeout">Erro de timeout na consulta.</string>
    <string name="msg_error_campo_obrigatorio">Campo obrigatório.</string>
    <string name="msg_alerta_permissao">Para utilizar este aplicativo, você precisa aceitar as permissões.</string>
    <string name="transition_key">img_transition_key</string>
    <string name="action_add_lista_desejo">Adicionar a lista de desejos</string>
    <string name="title_activity_notificacoes">NotificacoesActivity</string>
    <string name="text_view_verificar_disponibilidade_anuncio">Verificar disponibilidade</string>
    <string name="label_entrar_ou_cadastrar">Entrar ou cadastrar</string>
    <string name="label_app">Make Party</string>
    <string name="label_configuracoes">Configurações</string>
    <string name="img_view_notificacoes">Notificações</string>
    <string name="img_view_calendario">Calendário</string>
    <string name="img_view_fazer_anuncio">Fazer anúncio</string>
    <string name="img_view_config">Configurações</string>
    <string name="img_view_user_avatar">Avatar de usuário </string>
    <string name="label_calendario">Calendário</string>
    <string name="label_configuracao">Configuração</string>
    <string name="label_dia_selecionado_fornecedor">Dia selecionado do calendário</string>
    <string name="nome"><![CDATA[Nome >]]></string>
    <string name="modificar">Modificar</string>
    <string name="sair"><![CDATA[Sair >]]></string>
    <string name="apagar_conta"><![CDATA[Apagar conta >]]></string>
    <string name="mandar_mensagem"><![CDATA[Mandar mensagem >]]></string>
    <string name="imei_cnpj"><![CDATA[IMEI/CNPJ >]]></string>
    <string name="senha"><![CDATA[Senha >]]></string>
    <string name="e_mail"><![CDATA[E-mail >]]></string>
    <string name="text_view_mudar_plano">Mudar plano      ></string>
    <string name="ic_mudar_foto_perfil">Mudar foto do perfil</string>
    <string name="text_atualizar">Atualizar</string>


</resources>
