<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24dp"
        android:orderInCategory="200"
        android:title="@string/Search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_carrinho"
        android:icon="@drawable/ic_carrinho_24dp"
        android:title="@string/carrinho"
        android:orderInCategory="301"
        app:showAsAction="always">

    </item>
    <item
        android:id="@+id/action_add_lista_desejo"
        android:orderInCategory="100"
        android:title="@string/action_add_lista_desejo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filtrar_por_regiao"
        android:orderInCategory="100"
        android:title="@string/action_filtrar_por_regiao"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filtrar_por_preco"
        android:orderInCategory="100"
        android:title="@string/action_filtrar_por_preco"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings1"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:orderInCategory="101"
        android:title="Sair" />

</menu>